--- a/app/views/user/_actions.html.haml
+++ b/app/views/user/_actions.html.haml
@@ -32,9 +32,15 @@
             %i.fa.fa-exclamation-triangle.fa-fw
             = t("voc.report")
           - if current_user.mod?
+            %a.dropdown-item{ href: moderation_reports_path(user: user.screen_name) }
+              %i.far.fa-flag.fa-fw
+              = t(".reports_from", user: user.screen_name)
+            %a.dropdown-item{ href: moderation_reports_path(target_user: user.screen_name) }
+              %i.fas.fa-flag.fa-fw
+              = t(".reports_of", user: user.screen_name)
             %a.dropdown-item{ href: '#', data: { bs_target: '#modal-privileges', bs_toggle: :modal } }
               %i.fa.fa-wrench.fa-fw
-              = raw t(".privilege", user: user.screen_name)
+              = t(".privilege", user: user.screen_name)
             - unless user.has_cached_role?(:administrator)
               %a.dropdown-item{ href: '#', data: { bs_target: '#modal-ban', bs_toggle: :modal } }
                 %i.fa.fa-ban.fa-fw
