--- a/app/views/modal/_privileges.html.haml
+++ b/app/views/modal/_privileges.html.haml
@@ -9,6 +9,6 @@
       %ul.list-group
         - if current_user.has_cached_role?(:administrator)
           = render "modal/privileges/item", privilege: "moderator", description: t(".role.moderator"), user: user
-          = render "modal/privileges/item", privilege: "admin", description: t(".role.admin"), user: user
+          = render "modal/privileges/item", privilege: "administrator", description: t(".role.admin"), user: user
       .modal-footer
         %button.btn.btn-primary{ name: "checked-privileges", type: :button, data: { bs_dismiss: :modal } }= t("voc.close")
