--- a/app/views/answerbox/_comments.html.haml
+++ b/app/views/answerbox/_comments.html.haml
@@ -20,7 +20,7 @@
               = render "reactions/destroy", type: "Comment", target: comment
             - else
               = render "reactions/create", type: "Comment", target: comment
-            .btn-group
-              %button.btn.btn-link.btn-sm.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
+            .dropdown.d-inline
+              %button.btn.btn-link.answerbox__action.dropdown-toggle{ data: { bs_toggle: :dropdown }, aria: { expanded: false } }
                 %span.caret
               = render "actions/comment", comment: comment, answer: a
