--- a/app/views/navigation/dropdown/_profile.html.haml
+++ b/app/views/navigation/dropdown/_profile.html.haml
@@ -16,8 +16,8 @@
       = link_to moderation_toggle_unmask_path, class: "dropdown-item", data: { turbo_method: :post } do
         %i.fa.fa-toggle-off
         = t(".unmask.enable")
-    %a.dropdown-item{ href: moderation_reports_path }
-      %i.fa.fa-fw.fa-gavel
+    %a.dropdown-item{ class: @has_new_reports ? "text-primary" : nil, href: moderation_reports_path }
+      %i.fa.fa-fw.fa-gavel{ class: @has_new_reports ? "fa-fade" : nil }
       = t(".moderation")
     - if current_user.has_cached_role?(:administrator)
       %a.dropdown-item{ href: admin_dashboard_path }
