--- a/app/views/reactions/_destroy.html.haml
+++ b/app/views/reactions/_destroy.html.haml
@@ -6,7 +6,7 @@
                       data: { controller: :reaction, action: "turbo:submit-start->reaction#disable turbo:submit-end->reaction#enable" } },
               class: "btn btn-link answerbox__action unsmile",
               data: { reaction_target: :button } do
-    %i.fa.fa-fw.fa-smile-o
+    %i.fa.fa-smile-o
     %span= target.smile_count
 
 - if type == "Comment"
@@ -17,5 +17,5 @@
                       data: { controller: :reaction, action: "turbo:submit-start->reaction#disable turbo:submit-end->reaction#enable" } },
               class: "btn btn-link answerbox__action unsmile",
               data: { reaction_target: :button } do
-    %i.fa.fa-fw.fa-smile-o
+    %i.fa.fa-smile-o
     %span= target.smile_count
