--- a/app/views/application/_answerbox.html.haml
+++ b/app/views/application/_answerbox.html.haml
@@ -9,11 +9,19 @@
         = markdown a.content
       - if a.long? && !display_all
         = render "shared/collapse", type: "answer"
+    .d-md-flex
+      .text-muted
+        .d-flex.align-items-center
+          .flex-shrink-0
+            %a{ href: user_path(a.user) }
+              = render AvatarComponent.new(user: a.user, size: "sm", classes: ["answerbox__answer-user-avatar"])
+          .flex-grow-1
+            %h6.answerbox__answer-user
+              = user_screen_name(a.user)
               ·
-              %i.fa.fa-thumbtack
-              = t(".pinned")
-        .col-md-6.d-md-flex.answerbox__actions
-          = render "answerbox/actions", a:, display_all:
+              = link_to(time_tooltip(a), answer_path(a.user.screen_name, a.id), data: { selection_hotkey: "l" })
+      .d-flex.d-md-block.answerbox__actions.ms-auto
+        = render "answerbox/actions", a:, display_all:
   .card-footer{ id: "ab-comments-section-#{a.id}", class: display_all.nil? ? "d-none" : nil }
     = turbo_frame_tag("ab-reactions-list-#{a.id}", src: reactions_path(a.question, a), loading: :lazy) do
       .d-flex.smiles
