Remove hidden overflow styling from question user heading

--- a/app/assets/stylesheets/components/_question.scss
+++ b/app/assets/stylesheets/components/_question.scss
@@ -10,8 +10,11 @@
   &__text,
   &__user {
     margin-bottom: 0;
-    overflow: hidden;
     word-break: break-word;
+  }
+
+  &__text {
+    overflow: hidden;
   }
 
   &--sticky {
