Fix coloring of action toggle in new inbox entries

--- a/app/assets/stylesheets/components/_inbox-entry.scss
+++ b/app/assets/stylesheets/components/_inbox-entry.scss
@@ -23,6 +23,10 @@
       .text-muted {
         color: RGBA(var(--primary-text), 0.8) !important;
       }
+
+      .btn {
+        color: inherit;
+      }
     }
   }
 
