--- a/app/components/question_component/question_component.html.haml
+++ b/app/components/question_component/question_component.html.haml
@@ -6,12 +6,15 @@
   .flex-grow-1
     %h6.text-muted.question__user
       - if @question.author_is_anonymous
-        %i.fas.fa-user-secret{ title: t(".anon_hint") }
+        %span{ title: t(".anon_hint"), data: { controller: :tooltip, bs_placement: :bottom } }
+          %i.fas.fa-user-secret
       - if @profile_question && @question.direct
         - if user_signed_in? && @question.user == current_user
-          %i.fa.fa-eye-slash{ data: { bs_toggle: "tooltip", bs_title: t(".visible_to_you") } }
+          %span.d-inline-block{ title: t(".visible_to_you"), data: { controller: :tooltip, bs_placement: :bottom } }
+            %i.fa.fa-eye-slash
         - elsif moderation_view?
-          %i.fa.fa-eye-slash{ data: { bs_toggle: "tooltip", bs_title: t(".visible_mod_mode") } }
+          %span{ title: t(".visible_mod_mode"), data: { controller: :tooltip, bs_placement: :bottom } }
+            %i.fa.fa-eye-slash
       = user_screen_name(@question.user, context_user: @context_user, author_identifier: author_identifier)
       - if follower_question?
         ·
