--- a/app/views/notifications/type/_reaction.html.haml
+++ b/app/views/notifications/type/_reaction.html.haml
@@ -10,16 +10,16 @@
               type: link_to(t(".#{notification.target.parent_type.downcase}.link_text"),
                               answer_path(username: notification.target.user.screen_name,
                               id: notification.target.parent.id),
-                              target: "_top"),
-              time: time_tooltip(notification.target))
+                              target: "_top"))
       - elsif notification.target.parent_type == "Comment"
         = t(".heading_html",
               user: user_screen_name(notification.target.user),
               type: link_to(t(".#{notification.target.parent_type.downcase}.link_text"),
                               answer_path(username: notification.target.user.screen_name,
                               id: notification.target.parent.answer.id),
-                              target: "_top"),
-              time: time_tooltip(notification.target))
+                              target: "_top"))
+      ·
+      = time_tooltip(notification.target)
     .list-group
       .list-group-item
         %h6.notification__list-heading= t("activerecord.models.#{notification.target.parent_type.downcase}.one")
