--- a/app/views/about/index.html.haml
+++ b/app/views/about/index.html.haml
@@ -5,12 +5,18 @@
       = render "layouts/messages"
       %h1= APP_CONFIG["site_name"]
       %p= t(".subtitle")
-      %p
-        %a.btn.btn-outline-light.btn-lg{ href: url_for(new_user_registration_path) }
-          = t(".register")
-      %small
-        = t(".already_member")
-        = link_to t("voc.login"), new_user_session_path
+      - if APP_CONFIG.dig(:features, :registration, :enabled)
+        %p
+          %a.btn.btn-outline-light.btn-lg{ href: url_for(new_user_registration_path) }
+            = t(".register")
+        %small
+          = t(".already_member")
+          = link_to t("voc.login"), new_user_session_path
+      - else
+        %p
+          %a.btn.btn-outline-light.btn-lg{ href: url_for(new_user_session_path) }
+            = t("voc.login")
+
   .row.my-5.my-sm-10
     .col-sm-6.order-5.order-sm-1.text-center.text-sm-right
       %h2.mb-4= t(".questions.header")
@@ -77,12 +83,13 @@
         = t(".your_data.header")
       %p= t(".your_data.body", app_name: APP_CONFIG["site_name"])
 
-  .card
-    .card-body
-      %h2= t(".prompt.header")
-      %p= t(".prompt.body")
-      %p
-        %a.btn.btn-primary.btn-lg{ href: url_for(new_user_registration_path) }
-          = t(".register")
+  - if APP_CONFIG.dig(:features, :registration, :enabled)
+    .card
+      .card-body
+        %h2= t(".prompt.header")
+        %p= t(".prompt.body")
+        %p
+          %a.btn.btn-primary.btn-lg{ href: url_for(new_user_registration_path) }
+            = t(".register")
 
 = render "shared/links"
