--- a/app/views/application/_questionbox.html.haml
+++ b/app/views/application/_questionbox.html.haml
@@ -40,11 +40,11 @@
                 %input{ name: "qb-to", type: "hidden", value: user.id }/
                 %button.btn.btn-primary{ name: "qb-ask",
                   type: :button,
-                  data: { loading_text: t(".load"), promote: user_signed_in? || !user_signed_in? && !APP_CONFIG.dig(:features, :registration, :enabled) ? "false" : "true", "character-count-target": "action" } }
+                  data: { loading_text: t(".load"), promote: user_signed_in? || !user_signed_in? && !Retrospring::Config.registrations_enabled ? "false" : "true", "character-count-target": "action" } }
                   Ask
       - unless user_signed_in?
         - if user.privacy_allow_anonymous_questions?
-          - if APP_CONFIG.dig(:features, :registration, :enabled)
+          - if Retrospring::Config.registrations_enabled?
             .d-none#question-box-promote
               .row
                 .col-12.text-center
@@ -61,7 +61,7 @@
                   %small= t(".promote.join", app_title: APP_CONFIG["site_name"])
         - else
           .text-center
-            - if APP_CONFIG.dig(:features, :registration, :enabled)
+            - if Retrospring::Config.registrations_enabled?
               %strong= t(".status.non_anonymous_html", sign_in: link_to(t("voc.login"), new_user_session_path), sign_up: link_to(t("voc.register"), new_user_registration_path))
             - else
               %strong= t(".status.non_anonymous_no_registration_html", sign_in: link_to(t("voc.login"), new_user_session_path))
