--- a/app/views/navigation/_guest.html.haml
+++ b/app/views/navigation/_guest.html.haml
@@ -14,5 +14,5 @@
     .collapse.navbar-collapse#j2-main-navbar-collapse
       %ul.nav.navbar-nav.ms-auto
         = nav_entry t("voc.login"), new_user_session_path
-        - if APP_CONFIG.dig(:features, :registration, :enabled)
+        - if Retrospring::Config.registrations_enabled?
           = nav_entry t("voc.register"), new_user_registration_path
