--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -2,7 +2,7 @@
   = link_to 'Sign in', new_session_path(resource_name)
   %br/
 
-- if devise_mapping.registerable? && controller_name != 'registrations'
+- if devise_mapping.registerable? && controller_name != 'registrations' && Retrospring::Config.registrations_enabled?
   = link_to 'Sign up', new_registration_path(resource_name)
   %br/
 
